# lumiweave

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_SETUP.md  README.md  _patch_dispatcher.py  deploy.py  docker-compose.yml  lumiweave.spec  push.bat  pyproject.toml  requirements-all.txt  setup.bat  start.bat  start_backend.bat  start_frontend.bat
agents/: README.md  agent-creative.yaml  agent-customer-service.yaml  agent-dsl-architect.yaml  agent-education.yaml  agent-finance.yaml  agent-general.yaml  agent-legal.yaml  agent-marketing.yaml  agent-medical.yaml  ai-ml-engineer.yaml  com.aihub.045e131842.yaml  com.aihub.3c6d4bfefa.yaml  com.aihub.43164c8cc4.yaml  com.aihub.478f3413c6.yaml  com.aihub.479e1a5f8f.yaml  com.aihub.7c9816b050.yaml  com.aihub.89854b25a6.yaml  com.aihub.8dac304025.yaml  com.aihub.c6ee9b0fb8.yaml  com.aihub.dd09d44d99.yaml  com.aihub.ea26933f3b.yaml  com.aihub.f2089d4d8a.yaml  com.aihub.f9f328790b.yaml  cpp-system.yaml  devops-kubernetes.yaml  frontend-react.yaml  fullstack-builder.yaml  golang-cloud.yaml  integration-tester.yaml  java-spring.yaml  llm-provider-adapter.yaml  mobile-flutter.yaml  orchestrator-agent.yaml  planner-agent.yaml  python-backend.yaml  rag-vector-engineer.yaml  rust-system.yaml  spec-analysis.md  spec-v0.2.yaml  (+31 more)
builder/: risk-check.md  spec-validation.md
docs/: PROVIDER_API_REFERENCE.md
lumiweave/: cli.py  launcher.py
runner/: README.md  cli.py  llm.py  loader.py  requirements.txt  runner.py  tool_handlers.py
scripts/: generate_domain_agents.py
shared/: adapter_registry.py  agent_dispatcher.py  (+14 more)
(+87 files in other folders)
